Input to main changes

--- a/html/control-page-flash.html
+++ b/html/control-page-flash.html
@@ -34,7 +34,7 @@
 
 <h2 class="padded">Stream 1</h2>
 <div class="padleft" id="player" style="width:320px;height:180px"><img src="splash_black.jpg" height="180" width="320" /></div>
-<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/input");
+<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/main");
 $f("player", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip: {url: 'stream1', scaling: 'fit', live: true, autoPlay: true, provider: 'hddn'}, plugins: {hddn: {url: "flowplayer.rtmp-3.2.13.swf", netConnectionUrl: fulladdress}}, canvas: {backgroundGradient: 'none'}}); $f("player").play();</script>
 
 
@@ -61,7 +61,7 @@ $f("player", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip:
 
 <h2 class="padded">Stream 2</h2>
 <div class="padleft" id="player2" style="width:320px;height:180px"><img src="splash_black.jpg" height="180" width="320" /></div>
-<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/input");
+<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/main");
 $f("player2", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip: {url: 'stream2', scaling: 'fit', live: true, autoPlay: true, provider: 'hddn'}, plugins: {hddn: {url: "flowplayer.rtmp-3.2.13.swf", netConnectionUrl: fulladdress}}, canvas: {backgroundGradient: 'none'}}); $f("player2").play();</script>
 
 <div class="padded">
@@ -87,7 +87,7 @@ $f("player2", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip
 
 <button class="collapsible"><h2 class="padded">Stream 3</h2></button>
 <div class="content"><div class="padleft" id="player3" style="width:320px;height:180px"><img src="splash_black.jpg" height="180" width="320" /></div>
-<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/input");
+<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/main");
 $f("player3", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip: {url: 'stream3', scaling: 'fit', live: true, autoPlay: true, provider: 'hddn'}, plugins: {hddn: {url: "flowplayer.rtmp-3.2.13.swf", netConnectionUrl: fulladdress}}, canvas: {backgroundGradient: 'none'}}); $f("player3").play();</script>
 
 <div class="padded">
@@ -113,7 +113,7 @@ $f("player3", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip
 
 <button class="collapsible"><h2 class="padded">Stream 4</h2></button>
 <div class="content"><div class="padleft" id="player4" style="width:320px;height:180px"><img src="splash_black.jpg" height="180" width="320" /></div>
-<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/input");
+<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/main");
 $f("player4", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip: {url: 'stream4', scaling: 'fit', live: true, autoPlay: true, provider: 'hddn'}, plugins: {hddn: {url: "flowplayer.rtmp-3.2.13.swf", netConnectionUrl: fulladdress}}, canvas: {backgroundGradient: 'none'}}); $f("player4").play();</script>
 
 <div class="padded">
@@ -139,7 +139,7 @@ $f("player4", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip
 
 <button class="collapsible"><h2 class="padded">Stream 5</h2></button>
 <div class="content"><div class="padleft" id="player5" style="width:320px;height:180px"><img src="splash_black.jpg" height="180" width="320" /></div>
-<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/input");
+<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/main");
 $f("player5", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip: {url: 'stream5', scaling: 'fit', live: true, autoPlay: true, provider: 'hddn'}, plugins: {hddn: {url: "flowplayer.rtmp-3.2.13.swf", netConnectionUrl: fulladdress}}, canvas: {backgroundGradient: 'none'}}); $f("player5").play();</script>
 
 <div class="padded">
@@ -165,7 +165,7 @@ $f("player5", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip
 
 <button class="collapsible"><h2 class="padded">Stream 6</h2></button>
 <div class="content"><div class="padleft" id="player6" style="width:320px;height:180px"><img src="splash_black.jpg" height="180" width="320" /></div>
-<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/input");
+<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/main");
 $f("player6", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip: {url: 'stream6', scaling: 'fit', live: true, autoPlay: true, provider: 'hddn'}, plugins: {hddn: {url: "flowplayer.rtmp-3.2.13.swf", netConnectionUrl: fulladdress}}, canvas: {backgroundGradient: 'none'}}); $f("player6").play();</script>
 
 <div class="padded">
@@ -191,7 +191,7 @@ $f("player6", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip
 
 <button class="collapsible"><h2 class="padded">Stream 7</h2></button>
 <div class="content"><div class="padleft" id="player7" style="width:320px;height:180px"><img src="splash_black.jpg" height="180" width="320" /></div>
-<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/input");
+<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/main");
 $f("player7", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip: {url: 'stream7', scaling: 'fit', live: true, autoPlay: true, provider: 'hddn'}, plugins: {hddn: {url: "flowplayer.rtmp-3.2.13.swf", netConnectionUrl: fulladdress}}, canvas: {backgroundGradient: 'none'}}); $f("player7").play();</script>
 
 <div class="padded">
@@ -217,7 +217,7 @@ $f("player7", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip
 
 <button class="collapsible"><h2 class="padded">Stream 8</h2></button>
 <div class="content"><div class="padleft" id="player8" style="width:320px;height:180px"><img src="splash_black.jpg" height="180" width="320" /></div>
-<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/input");
+<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/main");
 $f("player8", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip: {url: 'stream8', scaling: 'fit', live: true, autoPlay: true, provider: 'hddn'}, plugins: {hddn: {url: "flowplayer.rtmp-3.2.13.swf", netConnectionUrl: fulladdress}}, canvas: {backgroundGradient: 'none'}}); $f("player8").play();</script>
 
 <div class="padded">
@@ -243,7 +243,7 @@ $f("player8", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip
 
 <button class="collapsible"><h2 class="padded">Stream 9</h2></button>
 <div class="content"><div class="padleft" id="player9" style="width:320px;height:180px"><img src="splash_black.jpg" height="180" width="320" /></div>
-<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/input");
+<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/main");
 $f("player9", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip: {url: 'stream9', scaling: 'fit', live: true, autoPlay: true, provider: 'hddn'}, plugins: {hddn: {url: "flowplayer.rtmp-3.2.13.swf", netConnectionUrl: fulladdress}}, canvas: {backgroundGradient: 'none'}}); $f("player9").play();</script>
 
 <div class="padded">
@@ -269,7 +269,7 @@ $f("player9", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip
 
 <button class="collapsible"><h2 class="padded">Stream 10</h2></button>
 <div class="content"><div class="padleft" id="player10" style="width:320px;height:180px"><img src="splash_black.jpg" height="180" width="320" /></div>
-<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/input");
+<script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/main");
 $f("player10", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip: {url: 'stream10', scaling: 'fit', live: true, autoPlay: true, provider: 'hddn'}, plugins: {hddn: {url: "flowplayer.rtmp-3.2.13.swf", netConnectionUrl: fulladdress}}, canvas: {backgroundGradient: 'none'}}); $f("player10").play();</script>
 
 <div class="padded">
