Input to main changes.

--- a/html/control-page-flash.html
+++ b/html/control-page-flash.html
@@ -56,7 +56,7 @@ $f("player", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip:
 
 <p><form method="post" target="_blank" action="/1.php?1vol"><b>Volume: </b><input type="text" name="vol_level" size="5" placeholder="1"/><input type="submit" value="Change" /></form></p>
 
-<p><b>Main/backup/holding/Ad video Switch:</b> <a href="/1.php?1main" target="_blank">Turn on main</a>   |||   <a href="/1.php?1back" target="_blank">Turn on backup</a>   |||   <a href="/1.php?1holding" target="_blank">Turn on holding screen</a>   |||   <a href="/1.php?1video" target="_blank">Turn on Ad video</a>   |||   <a href="/1.php?1playlist" target="_blank">Turn on playlist</a>   |||   <a href="/1.php?1off" target="_blank">Turn off livestream</a></p></div>
+<p><b>Main/backup/holding/Ad video Switch:</b> <a href="/1.php?1on" target="_blank">Turn on livestream</a>   |||   <a href="/1.php?1main" target="_blank">Turn on main</a>   |||   <a href="/1.php?1back" target="_blank">Turn on backup</a>   |||   <a href="/1.php?1holding" target="_blank">Turn on holding screen</a>   |||   <a href="/1.php?1video" target="_blank">Turn on Ad video</a>   |||   <a href="/1.php?1playlist" target="_blank">Turn on playlist</a>   |||   <a href="/1.php?1off" target="_blank">Turn off livestream</a></p></div>
 <hr>
 
 <h2 class="padded">Stream 2</h2>
