Update SRT Accept for makito

--- a/html/control-page-flash.html
+++ b/html/control-page-flash.html
@@ -32,6 +32,8 @@
 <div style="text-align:center" class="padded"><p><form method="post" target="_blank" action="/config.php?remap"><b>No. of Audio Channels: </b><input type="text" name="channel_no" size="5" placeholder="4"/><input type="submit" value="Remap" /></form></p>
 <p><a href="/config.php?remapoff" target="_blank">Turn off Remapping</a></p></div>
 
+<div style="text-align:center" class="padded"><p>SRT Accept: <a href="/config.php?srtaccept" target="_blank">   ON</a>    |||    <a href="/config.php?srtacceptoff" target="_blank">   OFF</a></p></div>
+
 <h2 class="padded">Stream 1</h2>
 <div class="padleft" id="player" style="width:320px;height:180px"><img src="splash_black.jpg" height="180" width="320" /></div>
 <script>var address = window.location.hostname; var rtmp = "rtmp://"; fulladdress = rtmp.concat(address, "/main");
