Float Livestream button to right

--- a/html/control-page-flash.html
+++ b/html/control-page-flash.html
@@ -58,7 +58,7 @@ $f("player", "https://releases.flowplayer.org/swf/flowplayer-3.2.16.swf", {clip:
 
 <p><form method="post" target="_blank" action="/1.php?1vol"><b>Volume: </b><input type="text" name="vol_level" size="5" placeholder="1"/><input type="submit" value="Change" /></form></p>
 
-<p><b>Livestream On/Off:</b> <a href="/1.php?1on" target="_blank">Turn on</a>   |||   <a href="/1.php?1off" target="_blank">Turn off</a></p>
+<pstyle="float:right"><b>Livestream On/Off:</b> <a href="/1.php?1on" target="_blank">Turn on</a>   |||   <a href="/1.php?1off" target="_blank">Turn off</a></p>
 <p><b>Choose Input:</b> <a href="/1.php?1main" target="_blank">Main</a>   |||   <a href="/1.php?1back" target="_blank">Backup</a>   |||   <a href="/1.php?1holding" target="_blank">Holding Screen</a>   |||   <a href="/1.php?1video" target="_blank">Ad Video</a>   |||   <a href="/1.php?1playlist" target="_blank">Playlist</a></p></div>
 <hr>
 
