To wok with rtmp needing login and password

--- a/html/settings.html
+++ b/html/settings.html
@@ -38,6 +38,7 @@ Resolution: <select name="resolution"><option value="source">Source</option><opt
 <input type="submit" value="Add destination" /> <br/>
 </form>
 <p><a href="/config.php?destlist" target="_blank">Destination List</a></p>
+<p><b>Note:</b> If a login/password has to be added, enter the details in the format rtmp://server/streamkey-+-+flashver=FMLE/3.020(compatible;20FMSc/1.0)-+-+pubUser=login-+-+pubPasswd=password</p>
 </div>
 
 <hr>
